# oratio-serve

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  justfile  pyproject.toml
oratio_serve/: .env  __main__.py  main.py
oratio_serve/api/v1/: endpoints.py  schemas.py
oratio_serve/core/: config.py  logger.py
oratio_serve/models/: asr_model.py
oratio_serve/services/: inference_service.py
oratio_serve/workers/: model_manager.py
